# MemoryOS

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmark/: run_benchmark.py
memory_os/: __init__.py  _instructor.py  _litellm.py  _utils.py  agent.py  compression.py  decay.py  emotion.py  exceptions.py  extractor.py  llm_utils.py  memory.py  router.py  schemas.py  session.py  store.py  validators.py  worker.py
scripts/: cli_chat.py
tests/: test_decay.py  test_emotion.py  test_extractor.py  test_memory_os.py  test_store.py
